# oboobot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.toml  deep.rs  deep.sh  install.ps1  install.sh
.github/workflows/: ci.yml  trading.yml
broker/: Cargo.toml
broker/src/: adapter.rs  deriv.rs  lib.rs  mock.rs  stubs.rs
daemon/: Cargo.toml
daemon/src/: assistant.rs  config.rs  event_bus.rs  health.rs  lib.rs  main.rs  monitor.rs  news.rs  notifications.rs  operations.rs  recovery.rs  scheduler.rs
daemon/tests/: integration_test.rs
domain/: Cargo.toml
domain/src/: errors.rs  events.rs  lib.rs  newtypes.rs  types.rs
persistence/: Cargo.toml
persistence/src/: cursor.rs  lib.rs  snapshot.rs
risk/: Cargo.toml
risk/src/: lib.rs  sizing.rs
session_time/: Cargo.toml
session_time/src/: calendar.rs  lib.rs  macro_cycle.rs  true_open.rs  true_open_capture.rs
src/: config.rs  error.rs  main.rs  notification.rs  price.rs  time.rs
strategy/: Cargo.toml
strategy/src/: buffers.rs  correlation.rs  lib.rs  smt.rs
