[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oboobot"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
session_time = { path = "../session_time" }
broker = { path = "../broker" }
strategy = { path = "../strategy" }
risk = { path = "../risk" }
persistence = { path = "../persistence" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
clap = { version = "~4.4", features = ["derive"] }
toml = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
