[package]
name = "risk"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
